--- a/docs/CITATIONS.adoc
+++ b/docs/CITATIONS.adoc
@@ -6,11 +6,11 @@
 [source,bibtex]
 ----
 @software{rsr-template-repo_2025,
-  author = {Polymath, Hyper},
+  author = {Jewell, Jonathan},
   title = {RSR-template-repo},
   year = {2025},
   url = {https://github.com/hyperpolymath/RSR-template-repo},
-  license = {AGPL-3.0-or-later}
+  license = {PMPL-1.0-or-later}
 }
 ----
 
